Fixed text input dark mode color

--- a/playbook/app/pb_kits/playbook/pb_text_input/_text_input.scss
+++ b/playbook/app/pb_kits/playbook/pb_text_input/_text_input.scss
@@ -49,6 +49,8 @@
         @include pb_title_4;
         @include pb_title_dark;
         overflow: hidden;
+        background-color: rgba($white,$opacity_1);
+        border-color: rgba($white,.15);
       }
 
       input:focus,
